--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,15 @@ authors = [{ name = "redjax", email = "jackenyon@gmail.com" }]
 requires-python = ">=3.11"
 dependencies = [
     "alembic>=1.13.3",
+    "celery>=5.4.0",
     "dynaconf>=3.2.6",
     "hishel>=0.0.33",
     "httpx>=0.27.2",
+    "pandas>=2.2.3",
     "psycopg2-binary>=2.9.10",
+    "pyarrow>=18.0.0",
     "pydantic>=2.9.2",
+    "redis>=5.2.0",
     "sqlalchemy>=2.0.36",
 ]
 
